fixed wrapping and paddings for course teaser block

--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -41,9 +41,9 @@
       right: 20px;
     }
   }
-  .vih-col-center {
+/*  .vih-col-center {
     display: flex; 
     align-items: center; 
     min-height: 107px;
-  }
+  }*/
 }
